@@ -3,7 +3,7 @@
 # It is sourced by the build scripts
 
 archspec="alpha;not-x86;not-s390;not-m68k;not-powerpc"
-kernelversion="2.6.18"
+kernelversion="2.6.24"
 arch_listname="alpha"
 minimum_memory=32
 # These two options should be set if condition 'smp' is set below
