@@ -3,9 +3,9 @@
 # It is sourced by the build scripts
 
 archspec="amd64;x86;not-s390;not-m68k;not-powerpc;not-alpha"
-kernelversion="2.6.18"
+kernelversion="2.6.24"
 arch_listname="amd64"
-minimum_memory=48
+minimum_memory=56
 minimum_memory_gtk=96
 # These two options should be set if condition 'smp' is set below
 smp_config_section="Processor type and features"
