@@ -3,7 +3,7 @@
 # It is sourced by the build scripts
 
 archspec="arm;not-x86;not-s390;not-m68k;not-powerpc;not-alpha"
-kernelversion="2.6.18"
+kernelversion="2.6.24"
 arch_listname="arm"
 minimum_memory=32
 # These two options should be set if condition 'smp' is set below
