@@ -3,7 +3,7 @@
 # It is sourced by the build scripts
 
 archspec="powerpc;not-s390;not-m68k;not-x86;not-alpha"
-kernelversion="2.6.18"
+kernelversion="2.6.24"
 arch_listname="powerpc"
 minimum_memory=32
 minimum_memory_gtk=128
