@@ -61,6 +61,15 @@ an ATI graphical card, but is unlikely to work on other systems.
 
 </para><para>
 
+Just as with the regular installer it is possible to add boot parameters
+when starting the graphical installer. One of those parameters allows to
+configure the mouse for left-handed use. Others allow to select the mouse
+device (e.g. for a serial mouse) and the mouse protocol.
+See <xref linkend="boot-parms"/> for valid parameters.
+
+</para>
+<note><para>
+
 The graphical installer requires significantly more memory to run than
 the regular installer: &minimum-memory-gtk;. If insufficient memory is
 available, it will automatically fall back to the regular
@@ -68,12 +77,12 @@ available, it will automatically fall back to the regular
 
 </para><para>
 
-You can add boot parameters when starting the graphical installer, just as
-with the regular installer. One of those parameters allows you to configure
-the mouse for left-handed use. See <xref linkend="boot-parms"/> for valid
-parameters.
+If the amount of memory in your system is below &minimum-memory;,
+the graphical installer may fail to boot at all while booting the
+regular installer would still work. Using the regular installer is
+recommended for systems with little available memory.
 
-</para>
+</para></note>
 
   <sect2 id="gtk-using">
   <title>Using the graphical installer</title>
