@@ -29,6 +29,9 @@ installation-guide (2008xxxx) UNRELEASED; urgency=low
   * Document preseeding of grub password.
   * Update how to suppress the removal of existing LVM data using preseeding.
   * Update version of X11 used in Lenny.
+  * Update kernel versions.
+  * Update memory requirements for i386 and amd64. Elaborate on installing
+    systems with less memory than the listed minimum.
 
   [ Joey Hess ]
   * Remove autopartkit from the module list.
